  `GET /api/node/logging/levels` and `PUT /api/node/logging/levels`, respectively.  Log messages can be returned from a "listener" at
  `GET /api/node/logging/messages`.  And the threshold for the log "listener" can be modified with
  `PUT /api/node/logging/messages/threshold`.  (Jason Gerlowski, Calvince Otieno)

* SOLR-16504: Convert CLI tools to use Jetty HTTP 2 client.  (Bence Szabo via Eric Pugh)  

* SOLR-15737: Solr's collection-level "snapshot" APIs now have v2 equivalents.  Snapshots can be created at `POST
  /api/collections/collName/snapshots/snapshotName`, listed at `GET /api/collections/collName/snapshots`, and deleted at
  `DELETE /api/collections/collName/snapshots/snapshotName`. (John Durham via Jason Gerlowski)

* SOLR-16391: Solr's v2 "create collection" API has been tweaked slightly to be more intuitive.  It remains available under
  `POST /api/collections`, but the top level "create" command-name key has been removed. (Jason Gerlowski)

* SOLR-16752: Docker: Leave out optional apt packages, slightly reducing image size and lowering attack surface (Quang-Cuong Bui)

* SOLR-16711: Extract SolrCLI tool implementations into their own classes and reorganize CLI related classes into new org.apache.solr.cli package. (Eric Pugh)

* SOLR-15493: Throw an error message if the feature store doesn't exist.  (Ilaria Petreti via Alessandro Benedetti)

* SOLR-16393: The v2 "create alias" API has been tweaked to be more intuitive.  The format of the request body has changed
  slightly: the "create-alias" command specifier has been removed, the "name" field for individual routers has been renamed
  to "type", and the routers themselves are now always grouped into a list. Additionally the v2 API has moved to the new path
  `POST /api/aliases`. (Jason Gerlowski)

* SOLR-16394: The v2 "restore" API has been tweaked to be more intuitive.  The top-level "restore-collection" command